[init] add update username
